# privacy-filter

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  requirements.txt
app/: chunker.py  config.py  labels.py  main.py  mcp_app.py  model.py  modes.py  postprocess.py  ratelimit.py  schemas.py  spoken_digits.py
app/routes/: batch.py  detect.py  health.py
docs/: PRD-pii-filter-service.md
docs/superpowers/plans/: 2026-04-23-pii-filter.md
docs/superpowers/specs/: 2026-04-23-pii-filter-design.md
mcp_server/: README.md  pyproject.toml
mcp_server/pii_filter_mcp/: __main__.py  server.py
mcp_server/tests/: test_tools.py
tests/: conftest.py  test_batch.py  test_chunker.py  test_config.py  test_detect.py  test_health.py  test_labels.py  test_mask.py  test_mcp.py  test_model.py  test_modes.py  test_postprocess.py  test_ratelimit.py  test_schemas.py  test_spoken_digits.py
