[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-filter-mcp"
version = "1.0.0"
description = "MCP server exposing pii-filter as Claude Desktop tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
pii-filter-mcp = "pii_filter_mcp.__main__:main"

[tool.setuptools.packages.find]
include = ["pii_filter_mcp*"]
